img border issues fixed

--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -14,7 +14,7 @@
         </div> -->
       <div class="flex flex-col md:flex-row bg-white rounded-xl  ml-0 sm:ml-2 mt-5 sm:mt-0"
         style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px">
-        <div class=" group overflow-hidden md:rounded-tl-xl md:rounded-bl-xl ">
+        <div class=" group overflow-hidden rounded-tl-xl   md:rounded-tr-none rounded-tr-xl md:rounded-bl-xl rounded-bl-none">
             <img src="assets/images/collage.jpg" alt="" 
             class="w-full h-full rounded-tl-xl rounded-bl-xl hidden md:block group-hover:scale-110 duration-300 " >
             <img src="assets/images/collage.jpg" alt="" class="rounded-tl-xl rounded-tr-xl  block md:hidden  h-50  w-full group-hover:scale-110 duration-300">
@@ -102,7 +102,7 @@
         <!-- <p class="pt-5 text-3xl font-bold text-myColor mt-5 text-center">Experience</p> -->
         <div class="flex flex-col md:flex-row bg-white rounded-xl  ml-0 sm:ml-2 mt-5"
         style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px">
-        <div class=" group overflow-hidden md:rounded-tl-xl md:rounded-bl-xl ">
+        <div class=" group overflow-hidden rounded-tl-xl   md:rounded-tr-none rounded-tr-xl md:rounded-bl-xl rounded-bl-none">
           <img src="assets/images/code.jpg" alt="" 
           class="w-full h-full rounded-tl-xl rounded-bl-xl hidden md:block group-hover:scale-110 duration-300 " >
           <img src="assets/images/code.jpg" alt="" class="rounded-tl-xl rounded-tr-xl  block md:hidden  h-50  w-full group-hover:scale-110 duration-300">
