added pdf and modified content

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
                 Specializing in Java & Angular, developing efficient and scalable web applications.
             </p>
             <div>
-                <a href="resume" download=true
+                <a href="assets/images/VigneshwaranPResume.pdf" download=VigneshwaranPResume
                     class="flex items-center px-6 py-3 my-2 text-white rounded-md cursor-pointer group w-fit bg-orange-400 font-bold">
                     Resume
                     <span class="duration-300 group-hover:translate-x-2">
