--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,40 +1,39 @@
 <div
-name="about"
-class="grid grid-cols-1 mt-32 mr-8 md:grid-cols-3  md:mt-48 mb-5"
+  name="about"
+  class="grid grid-cols-1 mt-32 mr-8 md:grid-cols-3 md:mt-56 mb-20"
 >
-<div class="hidden w-full lg:flex items-center justify-center">
-  <div class="">
-    <img
-      [src]="profile"
-      alt="my profile"
-      class="mx-auto h-96 rounded-2xl"
-    />
+  <div class="hidden w-full lg:flex items-center justify-center">
+    <div class="">
+      <img [src]="profile" alt="my profile" class="mx-auto h-96 rounded-2xl" />
+    </div>
   </div>
-</div>
-<div class="w-full col-span-3 px-10 lg:px-5 lg:col-span-2 ">
-  <h3 class="text-3xl font-bold text-center text-myColor lg:text-left">
-    About me
-  </h3>
-  <hr class="my-4 h-px bg-gray-200 border-0 dark:bg-gray-700" />
+  <div class="w-full col-span-3 px-10 lg:px-5 lg:col-span-2">
+    <h3 class="text-3xl font-bold text-center text-myColor lg:text-left">
+      About me
+    </h3>
+    <hr class="my-4 h-px bg-gray-200 border-0 dark:bg-gray-700" />
 
-  <p class="text-justify">
-    Expertise in developing responsive, user-friendly interfaces using Angular.
-    Skilled in creating customized, reusable components to improve UI consistency and performance.
-    Strong understanding of HTML5, CSS3, JavaScript, and TypeScript for building modern web applications.
-    Experience with state management, form validations, and API integrations in Angular.
-    Knowledge of responsive design principles and cross-browser compatibility.
-    <br />
-    <br />
-    Proficient in developing robust and efficient REST APIs using Java and Spring Boot.
-    Well-versed in security implementation using Spring Security, JWT, SAML, and OAuth2 to safeguard applications.
-    Experienced in JPA and Hibernate strategies for data persistence and database optimization.
-    Strong SQL expertise in writing complex queries, triggers, and stored procedures for data integrity and performance.
-    Familiar with microservices architecture and API versioning for scalable backend solutions.
-    <br />
-    <br />
-    Adept at using Git for version control, branching strategies, and code reviews.
-    Skilled in working within Agile environments, participating in sprint planning, stand-ups, and retrospectives.
-    Effective at collaborating with frontend, backend, and QA teams to ensure smooth development and deployment cycles.
-  </p>
-</div>
+    <p class="text-justify">
+      Full-stack developer with hands-on experience in building responsive web
+      applications using Angular and developing secure backend services with
+      Java Spring Boot. I specialize in delivering scalable and maintainable
+      solutions across the full software development lifecycle.
+      <br />
+      <br />
+      I create modern, user-friendly interfaces using Angular, with a focus on
+      reusable components, UI consistency, and performance. My skill set
+      includes HTML5, CSS3, JavaScript, and TypeScript, along with responsive
+      design and cross-browser compatibility. On the backend, I develop
+      efficient RESTful APIs with Spring Boot and implement security using
+      Spring Security, JWT, SAML, and OAuth2. I have experience with JPA,
+      Hibernate, microservices architecture, JHipster and good knowledge of SQL for
+      queries.
+      <br />
+      <br />
+      I’m proficient in Git for version control and familiar with Agile
+      practices like sprint planning, stand-ups, and retrospectives. I
+      collaborate effectively with cross-functional teams to ensure smooth
+      development, testing, and deployment cycles.
+    </p>
+  </div>
 </div>
